Rahul, Ashish | #2 | Moving functional tests to different module and refactoring pom xmls accordingly